[package]
name = "wasm_template"
version = "0.1.0"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "libwasm_template"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
maple-core = "0.4"
